# nitro2/swagger.yaml
@@ -23,9 +23,8 @@ definitions:
         x-go-name: Header
       id:
         description: the id for the chatroom
-        format: int64
         minimum: 1
-        type: integer
+        type: string
         x-go-name: ID
       name:
         description: the name for the chatroom
@@ -47,6 +46,51 @@ definitions:
     - display_name
     - type
     title: ChatroomRequest represents a muc chatroom response.
+    type: object
+    x-go-package: github.com/shizhongwang/myswagger/nitro2/chatroom-api/data
+  ChatroomMemeber:
+    properties:
+      chatroom_id:
+        description: the id for the chatroom
+        minimum: 1
+        type: string
+        x-go-name: ChatroomID
+      role:
+        description: |-
+          the user role in the chatroom
+
+          required: failse
+        type: string
+        x-go-name: Role
+      updated_at:
+        format: date-time
+        type: string
+        x-go-name: UpdatedAt
+      user_id:
+        description: the id for the user
+        type: string
+        x-go-name: UserID
+    required:
+    - user_id
+    title: ChatroomMemeberRequest represents a muc chatroom response.
+    type: object
+    x-go-package: github.com/shizhongwang/myswagger/nitro2/chatroom-member/data
+  ChatroomMemeberRequest:
+    properties:
+      role:
+        description: |-
+          the user role in the chatroom
+
+          required: failse
+        type: string
+        x-go-name: Role
+      user_id:
+        description: the id for the user
+        type: string
+        x-go-name: UserID
+    required:
+    - user_id
+    title: ChatroomMemeberRequest represents a muc chatroom request.
     type: object
     x-go-package: github.com/shizhongwang/myswagger/nitro2/chatroom-member/data
   ChatroomRequest:
@@ -78,7 +122,7 @@ definitions:
     - type
     title: ChatroomRequest represents a muc chatroom request.
     type: object
-    x-go-package: github.com/shizhongwang/myswagger/nitro2/chatroom-member/data
+    x-go-package: github.com/shizhongwang/myswagger/nitro2/chatroom-api/data
   GenericError:
     description: GenericError is a generic error message returned by a server
     properties:
